# zorja

./: .gitignore  LICENSE  README.md  stack.yaml  zorja.cabal
src/: Blackboard.hs  GenericsEx.hs  Main.hs
src/zorja/: ChangesMonad.hs  Collections.hs  Combine.hs  FunctorDExpr.hs  Jet.hs  Patchable.hs  PatchableTH.hs  Primitives.hs  Replaceable.hs  SumTypeWrapper.hs  ZCCC.hs  ZHOAS.hs
src/zorja/collections/: Bag.hs  Cofree.hs  Cofree.hs~  FAlgebra.hs  ListX.hs  MagicBag.hs  MagicTable.hs  MapOps.hs  MapRM.hs  MapValDelta.hs  PatchableSet.hs  Spliceable.hs  SplicedList.hs  TwoVal.hs  ZJIntMap.hs
test/: Main.hs  TestMain.hs  TestRoot.hs
test/subtests/: Cofree.hs  ListX.hs  PatchGen.hs  Patchable.hs  Primitives.hs  ZJIntMap.hs
test/zorja/: BasicGenerators.hs  PatchableTest.hs  PrimitivesTest.hs  SumTypeWrapperTest.hs
test/zorja/collections/: MapValDeltaTest.hs  SpliceableTest.hs  SplicedListTest.hs
