name:                zorja
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Izzimach/zorja#readme
license:             BSD3
license-file:        LICENSE
author:              Gary Haussmann
maintainer:          gjhaussmann@gmail.com
copyright:           Copyright (c) 2018 Gary Haussmann
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable zorja
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       constraints,
                       lens,
                       mtl
