name:                zorja
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Izzimach/zorja#readme
license:             BSD3
license-file:        LICENSE
author:              Gary Haussmann
maintainer:          gjhaussmann@gmail.com
copyright:           Copyright (c) 2018 Gary Haussmann
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  --main-is:             Main.hs
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-language:    Haskell2010
  exposed-modules:     Zorja.Patchable
  build-depends:       base >= 4.7 && < 5,
                       constraints,
                       containers,
                       lens,
                       mtl,
                       text,
                       generic-deriving,
                       generic-data,
                       recursion-schemes,
                       comonad,
                       distributive,
                       free,
                       vector,
                       edit-distance-vector

test-suite zorja-test
  type:                exitcode-stdio-1.0
  main-is:             TestRoot.hs
  hs-source-dirs:      test, src
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-language:    Haskell2010
  other-modules:       Zorja.Patchable
  build-depends:       base >= 4.7 && < 5,
                       zorja,
                       text,
                       HUnit,
                       QuickCheck

                      
