cabal-version:       2.2
name:                zorja
version:             0.1.0.0
synopsis:            Incremental Lambda Calculus, including Cofree Comonads
-- description:
homepage:            https://github.com/Izzimach/zorja#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Gary Haussmann
maintainer:          gjhaussmann@gmail.com
copyright:           Copyright (c) 2018 Gary Haussmann
category:            Web
build-type:          Simple
extra-source-files:  README.md

common deps
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5,
                       constraints,
                       containers,
                       lens,
                       mtl,
                       text,
                       generic-deriving,
                       generic-data,
                       recursion-schemes,
                       comonad,
                       distributive,
                       free,
                       vector,
                       groups,
                       first-class-families


common test-deps
  build-depends:        hedgehog

library
  import: deps
  exposed-modules:     Zorja.Patchable,
                       Zorja.Primitives,
                       Zorja.ZHOAS,
                       Zorja.FunctorDExpr,
                       Zorja.Collections.ListX,
                       Zorja.Collections.ZJIntMap,
                       Zorja.Collections.Cofree

test-suite zorja-test
  import: deps, test-deps
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test, src
  other-modules:       Zorja.Patchable,
                       Zorja.Primitives,
                       Zorja.ZHOAS,
                       Zorja.FunctorDExpr,
                       Zorja.Collections.ListX,
                       Zorja.Collections.ZJIntMap,
                       Zorja.Collections.Cofree,
                       Subtests.PatchGen,
                       Subtests.Primitives,
                       Subtests.ListX,
                       Subtests.ZJIntMap,
                       Subtests.Cofree
                      
